--- a/website/content/assignment/03-lab.Rmd
+++ b/website/content/assignment/03-lab.Rmd
@@ -7,7 +7,6 @@ link-citations: yes
 ---
 
 
-
 ```{r setup, message=FALSE, echo=FALSE, warning=FALSE}
 #install.packages(c("data.table","leaflet"))
 library(data.table)
@@ -28,19 +27,20 @@ As you do this, think about what questions you would like to ask regarding this 
 
 We will work with the meteorological data presented in lecture. Recall the dataset consists of weather station readings in the continental US. 
 
-**The objective of the lab is to find the weather station with the highest elevation and look at patterns in the time series of its wind speed and temperature.**
+**The objectives of the lab are to find the weather station with the highest elevation and look at patterns in the time series of its wind speed and temperature.**
 
 # Steps
 
 ### 1. Read in the data
 
-First download and then read in with data.table:fread()
+First download and then read in with `data.table::fread()`. This is slightly faster than some of the more common functions, such as `read.table`, but it produces a different type of object, which is why we need to convert it into a `data.frame` after reading it in.
 
 ```{r checking-file, include=FALSE}
 fn <- "https://raw.githubusercontent.com/USCbiostats/data-science-data/master/02_met/met_all.gz"
 if (!file.exists("met_all.gz"))
   download.file(fn, destfile = "met_all.gz")
 met <- data.table::fread("met_all.gz")
+met <- as.data.frame(met)
 ```
 
 
@@ -53,23 +53,18 @@ download.file(
 )
 
 met <- data.table::fread(file.path("~", "Downloads", "met_all.gz"))
+met <- as.data.frame(met)
 ```
 
-### 2. Check the dimensions, headers, footers. How many columns, rows are there?
+### 2. Check the dimensions, headers, footers.
 
-```{r}
-dim(met)
-head(met)
-tail(met)
-```
-There are 2,377,343 rows and 30 columns in the met dataset.
+**How many columns, rows are there? Some useful functions for this are `dim`, `head`, and `tail`**
 
 ### 3. Take a look at the variables.
 
-```{r}
-str(met)
-```
+**Show the type (class) of each variable (hint: try the `str` function).**
 
+**What are the names of the key variables related to our question of interest?**
 
 ### 4. Take a closer look at the key variables. 
 
@@ -82,53 +77,58 @@ summary(met$elev)
 summary(met$wind.sp)
 ```
 
-It looks like the elevation variable has observations with 9999.0, which is probably an indicator for missing. We should take a deeper look at the data dictionary to confirm. The wind speed variable is ok but there are a lot of missing data.
+It looks like the elevation variable has observations with 9999.0, which is probably an indicator for missing. We should take a deeper look at the [data dictionary](https://github.com/USCbiostats/data-science-data/blob/master/02_met/met-datadictionary.pdf) to confirm. The wind speed variable is OK but there is a lot of missing data.
 
 After checking the data we should make the appropriate modifications. Replace elevations with 9999 as `NA`.
 
 ```{r}
-met[met$elev==9999.0] <- NA
+met[met$elev==9999.0, ] <- NA
 summary(met$elev)
 ```
-At what elevation is the highest weather station?
 
-- The weather station with highest elevation is 4113 meters. This is after replacing 9999.0 values with the appropriate code for "missing", which is "NA".
+**At what elevation is the highest weather station?**
 
-We also have the issue of the minimum temperature being -40C, so we should remove those observations.
+We also have the issue of the minimum temperature being -40C, which seems implausible, so we should remove those observations.
 
 ```{r}
-met <- met[temp>-40]
-met2 <- met[order(temp)]
-head(met2)
+met <- met[met$temp > -40, ]
+head(met[order(met$temp), ])
 ```
 
-We again notice that there is a -17.2C temperature reading that seems suspicious.
+There are still some suspiciously low values for temperature (-17.2C), but we will deal with those later.
+
+We should also check the wind speed variable for any abnormalities.
+
+**How many missing values are there in the `wind.sp` variable?**
+
 
 ### 5. Check the data against an external data source.
 
-We should check the suspicious temperature value (where is it located?) and validate that the range of elevations make sense (-13 m to 4113 m).
+We should check the suspicious temperature value (where is it located?) and validate that the range of elevations make sense (-13m to 4113m).
 
 Google is your friend here.
 
 Fix any problems that arise in your checks.
 
-```{r}
-met <- met[temp>-15]
-met2 <- met[order(temp)]
-head(met2)
-```
- - Summarize that we removed temperatures colder than -15C. The new dataset has minimum temp -3C which is reasonable.
+**Where was the location for the coldest temperature readings (-17.2C)? Do these seem reasonable in context?**
+
+**Does the range of values for elevation make sense? Why or why not?**
+
 
 ### 6. Calculate summary statistics
 
-Remember to keep the initial question in mind. We want to pick out the weather station with maximum elevation and examine its windspeed and temperature.
+Remember to keep the initial question in mind. We want to pick out the weather station with maximum elevation and examine its wind speed and temperature.
 
 Some ideas: select the weather station with maximum elevation; look at the correlation between temperature and wind speed; look at the correlation between temperature and wind speed with hour and day of the month.
 
 ```{r}
-elev <- met[elev==max(elev), ]
+elev <- met[which(met$elev == max(met$elev, na.rm = TRUE)), ]
 summary(elev)
 ```
+
+Note that to find the maximum elevation, we had to add `na.rm = TRUE`, because the elevation variable contains missing values. This is an example of how missing values can quickly propagate throughout an analysis (as the "maximum" of `1`, `2`, and `NA` is `NA`, because it cannot be defined).
+
+Also note that we used the `which` function to tell us which elements of the logical comparison are `TRUE`. We did this because some of them were `NA`, which can lead to issues when subsetting by a logical variable.
 
 ```{r}
 cor(elev$temp, elev$wind.sp, use="complete")
@@ -138,17 +138,16 @@ cor(elev$wind.sp, elev$hour, use="complete")
 cor(elev$temp, elev$day, use="complete")
 ```
 
-### 7. Exploratory graphs
+The `use="complete"` argument is another thing we added to avoid compounding `NA`s.
 
+
+### 7. Exploratory graphs
 
 We should look at the distributions of all of the key variables to make sure there are no remaining issues with the data.
 
-```{r }
-hist(met$elev, breaks=100)
-hist(met$temp)
-hist(met$wind.sp)
-```
-One thing we should consider for later analyses is to log transform wind speed and elevation as the are very skewed.
+**Use the `hist` function to make histograms of the elevation, temperature, and wind speed variables for the whole dataset**
+
+One thing we should consider for later analyses is to log transform wind speed and elevation as they are very skewed.
 
 
 Look at where the weather station with highest elevation is located.
@@ -158,22 +157,24 @@ leaflet(elev) %>%
   addProviderTiles('OpenStreetMap') %>% 
   addCircles(lat=~lat,lng=~lon, opacity=1, fillOpacity=1, radius=100)
 ```
+
 Look at the time series of temperature and wind speed at this location. For this we will need to create a date-time variable for the x-axis.
 
 ```{r message=FALSE}
 library(lubridate)
 elev$date <- with(elev, ymd_h(paste(year, month, day, hour, sep= ' ')))
 summary(elev$date)
-elev <- elev[order(date)]
+elev <- elev[order(elev$date), ]
 head(elev)
 ```
+
 With the date-time variable we can plot the time series of temperature and wind speed.
 
-```{r}
-plot(elev$date, elev$temp, type='l')
-plot(elev$date, elev$wind.sp, type='l')
-```
-Summarize any trends that you see in these time series plots.
+**Use the `plot` function to make line graphs of temperature vs. date and wind speed vs. date** 
+
+
+**Summarize any trends that you see in these time series plots.**
+
 
 ### 8. Ask questions
 
